fixed button style and align nav bar

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -979,7 +979,7 @@ a:hover {
   padding: 0.5rem 1.2rem;
   margin: 0;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 1.5rem;
   border-radius: 0.3rem;
   border: 1px solid transparent;
   outline: none;
@@ -1036,7 +1036,7 @@ a:hover {
 }
 
 .btn.btn-info:hover {
-  background-color: #31e1bd;
+  background-color: #01130f;
 }
 
 .btn.btn-light {
